--- a/Syntax.html
+++ b/Syntax.html
@@ -5,62 +5,78 @@
     <meta charset="utf-8">
   </head>
 
-  Hypertext Markup Language (HTML) is the standard markup language <br>
+  <body>
+    <h1><a href="index.html">WEB</a></h1>
+    <ol>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
 
-  <!-- 태그 정리, 총 150개 이상 있음 -> 주로 쓰는 건 15~26개 정도
-      <strong> : 텍스트 Bold 처리
-      <u> : underline
-      <h1>, <h6> : 폰트 크기 내림차순 h1 > h6
-      <p> : paragraph 단락
-      <br> : new line 닫는 태그 없어도 됨
-      <img> : 사진파일 첨부
-      <li> : list로, 목차 등에 사용 반드시 부모 태그를 가지고 있음
-      <ul> : unordered list, 정렬되지 않은 list -> 번호 수동 기입
-      <ol> : ordered list, 정렬된 list -> 번호 자동 넘버링
+    <p>
+      <a href="https://www.w3.org/standards/types/" 
+      target="_blank" title="HEML reference"> Hypertext Markup Language (HTML)</a> 
+      is the standard markup language <br>
+    </p>
 
-      <title> : 페이지 제목 브라우저에 표기되는 이름 ex) GOOGLE, NAVER
-      <meta> : charset="텍스트를 읽어올 타입 지정 가능", 즉 아래 내용은 UTF-8로 이루어져 있다.
-      <head> : body를 설명하는 title, meta 등을 감싸는 태그
-      <body> : 본문을 감싸는 태그
-      <html> : head와 body를 감싸는 태그, 관용적 표기로 html 상단에 <!doctype html> 명시 이 문서는 HTML 문서라는 뜻
-  -->
-  <strong> creating web pages and <u>web</u> applications. </strong>
+    <!-- 태그 정리, 총 150개 이상 있음 -> 주로 쓰는 건 15~26개 정도
+        <strong> : 텍스트 Bold 처리
+        <u> : underline
+        <h1>, <h6> : 폰트 크기 내림차순 h1 > h6
+        <p> : paragraph 단락
+        <br> : new line 닫는 태그 없어도 됨
+        <img> : 사진파일 첨부
+        <li> : list로, 목차 등에 사용 반드시 부모 태그를 가지고 있음
+        <ul> : unordered list, 정렬되지 않은 list -> 번호 수동 기입
+        <ol> : ordered list, 정렬된 list -> 번호 자동 넘버링
 
-  <h1>This is heading 1</h1>  <!-- title -->
-  <h3>This is heading 3</h3>  <!-- 타이틀로 많이 사용함 -->
-  <h4>This is heading 4</h4>  
-  <h6>This is heading 6</h6>  
+        <title> : 페이지 제목 브라우저에 표기되는 이름 ex) GOOGLE, NAVER
+        <meta> : charset="텍스트를 읽어올 타입 지정 가능", 즉 아래 내용은 UTF-8로 이루어져 있다.
+        <head> : body를 설명하는 title, meta 등을 감싸는 태그
+        <body> : 본문을 감싸는 태그
+        <html> : head와 body를 감싸는 태그, 관용적 표기로 html 상단에 <!doctype html> 명시 이 문서는 HTML 문서라는 뜻
 
-  <p>Hello, world!<br>How are you today?</p>
-  <p style="margin-top: 60px;">Hello, world!<br>How are you today?</p>
+        <a> : anchor 링크 첨부 및 열기 / href 링크 지정, target 새 창 기존 창 등 선택
+        
+    -->
+    <strong> creating web pages and <u>web</u> applications. </strong>
 
-  <!-- Attribute : src, width를 통칭하는 키워드이며 순서의 상관관계는 없음 --> 
-  <p><img src="/img1.jpg" width="30%"></p>
+    <h1>This is heading 1</h1>  <!-- title -->
+    <h3>This is heading 3</h3>  <!-- 타이틀로 많이 사용함 -->
+    <h4>This is heading 4</h4>  
+    <h6>This is heading 6</h6>  
 
-  <!-- 
-      Tag에서 parent, child 관계로 많이 쓰이는 쌍
-        부모    자식   자자식
-        ul      li
-        table    tr     td
-  --> 
+    <p>Hello, world!<br>How are you today?</p>
+    <p style="margin-top: 60px;">Hello, world!<br>How are you today?</p>
 
-  <ul>
-    <li>1. HTML</li>
-    <li>2. CSS</li>
-    <li>3. JavaScript</li>
-  </ul>
+    <!-- Attribute : src, width를 통칭하는 키워드이며 순서의 상관관계는 없음 --> 
+    <p><img src="/img1.jpg" width="30%"></p>
 
-  <ol>
-    <li>egoing</li>
-    <li>k88055</li>
-    <li>youbin</li>
-  </ol>
+    <!-- 
+        Tag에서 parent, child 관계로 많이 쓰이는 쌍
+          부모    자식   자자식
+          ul      li
+          table    tr     td
+    --> 
 
-  <h1>HTML이란 무엇인가?</h1>
-  <!--  --> 
-  <!--  --> 
-  <!--  --> 
-  <!--  --> 
-  <!--  --> 
-  <!--  --> 
+    <ul>
+      <li>1. HTML</li>
+      <li>2. CSS</li>
+      <li>3. JavaScript</li>
+    </ul>
+
+    <ol>
+      <li>egoing</li>
+      <li>k88055</li>
+      <li>youbin</li>
+    </ol>
+
+    <h1>HTML이란 무엇인가?</h1>
+    <!--  --> 
+    <!--  --> 
+    <!--  --> 
+    <!--  --> 
+    <!--  --> 
+    <!--  --> 
+  </body>
 </html>
